--- a/github-workflows-pyrelease.yaml
+++ b/github-workflows-pyrelease.yaml
@@ -1,54 +1,92 @@
-# PyPI publish when released
-# https://github.com/actions/starter-workflows/blob/master/ci/python-publish.yml
+name: PyPI release
 
-# STILL UNTESTED
+# Make a PyPI release.  This action:
+# - builds the release files
+# - checks the tag version matches the source version
+# - releases on PyPI using the action
+#
+# The first time, you have to upload the release yourself to get the
+# API key, to add to gh-secrets.
+#
+# I upload it with:
+#   python setup.py sdist bdist_wheel
+#   twine upload dist/*
+#
+# To configure the secrets, see steps here:
+#   https://github.com/pypa/gh-action-pypi-publish
+#   secret name= pypi_password
 
-name: pypi-publish
+
+# If MOD_NAME not defined, infer it from the current directory.  If
+# inferred from the directory, '-' is replaced with '_'.  This is used
+# when checking the version name.
+#env:
+#  MOD_NAME: numpy
+
 on:
-  release:
-    types: [published]
+  # For Github release-based publishing
+  #release:
+  #  types: [published]
   # For tag-based (instead of Github-specific release-based):
-  #on:
-  #  push:
-  #    tags:
-  #      - '*'
-
-
-permissions:
-  contents: read
+  on:
+    push:
+      tags:
+        - '*'
 
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
-    # For tag-based (instead of Github-specific release-based):
-    #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    permissions:
+      contents: read
 
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      # https://github.com/actions/setup-python
-      - name: Verify that this is a tag push
-        if: "! startsWith(github.ref, 'refs/tags')"
-        env:
-          github_ref: ${{github.ref}}
-        run: |
-          echo "::error::This action only makes sense when run on a tag (github.ref = ${{github.ref}} which does not start with refs/tags/)"
-          exit 1
+    - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt -r requirements-dev.txt
-          pip install .
-          pip install setuptools wheel twine
-      - uses: rkdarst/action-verify-python-version@main
-      - name: Build
-        run: |
-          python setup.py sdist bdist_wheel
-      - name: Publish a Python distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN_RKDARST }}
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      #with:
+      #  python-version: 3.8
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install twine wheel
+
+    - name: Build
+      run: |
+        python setup.py sdist bdist_wheel
+
+    # Verify that the git tag has the same version as the python
+    # project version.
+    - uses: rkdarst/action-verify-python-version@main
+
+    - uses: actions/upload-artifact@master
+      if: ${{ github.event_name == 'push' }}
+      with:
+        name: dist-directory
+        path: dist/
+
+
+  upload:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    permissions:
+      id-token: write  # for trusted publishing
+    steps:
+
+    - uses: actions/download-artifact@v3
+      with:
+        name: dist-directory
+        path: dist/
+
+    - name: Publish on PyPI
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@release/v1
+      #with:
+        #user: __token__
+        #password: ${{ secrets.pypi_password }}
+        #repository_url: https://test.pypi.org/legacy/
